--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 .DS_Store
 .AppleDouble
 .LSOverride
-.vagrant
 Icon
 
 # Thumbnails
@@ -24,5 +23,5 @@ Icon
 ### Grunt ###
 node_modules
 
-### Vagrant ###
-.vagrant
+### Bower ###
+bower_components
