--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DevcampTlokinia",
+  "name": "devcamptlokinia",
   "title": "Devcamp Tlokinia",
   "description": "Devcamp Tlokinia",
   "version": "1.0.0",
