--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "normalize-css": "~2.1.3",
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
-    "picturefill":"~1.2.0"
+    "picturefill": "~1.2.0",
+    "jquery-waypoints": "~2.0.3"
   }
 }
